--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo celery взаимнаязабота">
-    <meta name="keywords" content="anishapo celery взаимнаязабота" />
+    <meta name="description" content="anishapo celery healingfood взаимнаязабота">
+    <meta name="keywords" content="anishapo celery healingfood взаимнаязабота" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo celery взаимнаязабота" />
+    <meta property="og:description" content="anishapo celery healingfood взаимнаязабота" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -83,6 +83,14 @@
 				<div class="stories__slider-wrap">
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<div class="stories__slide" title="anishapo healingfood">
+									<a href="./tags/./anishapo-healingfood.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo healingfood</div>
+									</a>
+								</div>
+							</div>
 							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo взаимнаязабота">
 									<a href="./tags/./anishapo-vzaimnayazabota.html">
@@ -135,27 +143,17 @@
 								<a href="./posts/./eto-navsegda-izmenit-vashu-zhizn-xxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>2209</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>2214</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=3leKvPxgRCEAX8u4UVr&oh=f509dd722e75ad26a9dc7cb7a5abd68c&oe=5E8CE3AD" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=3leKvPxgRCEAX8u4UVr&oh=fb28203b1a9a0e066adef5750163aa78&oe=5E9A12AD" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉</div>
 								</a>
-								<a href="./posts/./kak-spravit-sya-so-streptokokkom.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1651</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=zBZpa4mQZLkAX-fqIT0&oh=9ca9ae20d48a414aa998aead15215b18&oe=5E8975A6" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
-									</div>
-									<div class="article-more__item-name" style="
-">КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ</div>
-								</a>
 								<a href="./posts/./zernovyex-fasol-x-chechevitsa-1.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1466</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1467</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=C9Pz-e_n4vgAX-tIA0Y&oh=bc075bd0107479f4907403184789b658&oe=5E83C340" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 									</div>
@@ -165,7 +163,7 @@
 								<a href="./posts/./klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1163</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1168</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=8r9hnf_WH04AX9bR9p0&oh=73a58f5b0aa030ca6c1c3cfcc971fcd6&oe=5E8A0842" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
 									</div>
@@ -175,7 +173,7 @@
 								<a href="./posts/./pishchevye-drozhzhi-x-nutritional.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1077</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1078</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84347677_2665354757084113_8900968863076313356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=HU2IIgVmDSQAX_wFskv&oh=e1e808e74e24949f8b8699de14de4d9a&oe=5E863515" alt="ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL">
 									</div>
@@ -185,7 +183,7 @@
 								<a href="./posts/./malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1028</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1035</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=SIBCTmn81YoAX-wG64i&oh=75fc86c11157cf00ae84c7805e969343&oe=5E8327AF" alt="Мало кто знает и догадывается, что нездоровая">
 									</div>
@@ -195,17 +193,27 @@
 								<a href="./posts/./zernovyex-fasol-x-chechevitsa.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1008</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1012</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=6iQFDeZGIpQAX8cFAal&oh=5dd4f68c6e331d80c965cd7573867b13&oe=5E8736A6" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,</div>
 								</a>
+								<a href="./posts/./xx.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1010</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=4mS-ysl17ssAX_JBVJJ&oh=e5cdb3508ded9646c4eb00ea1850c83f&oe=5E8D435D" alt="❤️">
+									</div>
+									<div class="article-more__item-name" style="
+">❤️</div>
+								</a>
 								<a href="./posts/./shchadyashchee-ochishchenie-pecheni.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>871</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>872</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wFMSzZuqTTkAX_KExVd&oh=33ecd80b841fd3a7ff4bfa0cf0f4e60c&oe=5E828FB2" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
 									</div>
