--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="lekarstvo-nomer-1---chesnok" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=fKBd5rFyRL0AX_UYFzD&oh=564a51e236098f35c18245a3cd3a93b9&oe=5E976960" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xxkurs-praktikum-xkrepkiy-immunitetxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87648388_224055125417773_8649684401074661984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=wwmgkNL7fAoAX8caMlC&oh=0c0253ae0a59cdad81b5ff5080ac6361&oe=5E980F23" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍋Курс-практикум “Крепкий иммунитет”🍋">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=4mS-ysl17ssAX8MUEG-&oh=4f097750e9a091bb74ba27966795185a&oe=5E8D435D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❤️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=kxsQTp8BmlUAX-eUjny&oh=9b0a98828cf3ada4cb390f48a28c8d29&oe=5E8D435D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❤️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="prakticheskie-shagi-dlya-vosstanovleniya-pechenixxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=1PdDznSlpPsAX8Kcrve&oh=21d504d32b7f7f8fd20ac177cf4a4fb1&oe=5E990F39" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=qzYWNEqB_KoAX9S7377&oh=4f4edf9d0578378c13b0dd361c02e232&oe=5E990F39" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="eto-navsegda-izmenit-vashu-zhizn-xxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=3leKvPxgRCEAX_GLOpf&oh=2c78dd9d45fb5de60a7acfea198bebba&oe=5E9A12AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Z19aLRqK4qIAX8nwi2u&oh=5d6fbd1e1d21f590459fc05683a687b1&oe=5E9A12AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=SIBCTmn81YoAX9jXHnG&oh=011d0296d6b80c08e1668f4b3ecdd18f&oe=5E8327AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мало кто знает и догадывается, что нездоровая">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=G9-XQHcOrTYAX8TEKIR&oh=89c51c0687a0d8e05c0a415dcd2c660b&oe=5E9056AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мало кто знает и догадывается, что нездоровая">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zernovyex-fasol-x-chechevitsa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=6iQFDeZGIpQAX-rhIJC&oh=0c14694781711d5073e5574c14ad5f5f&oe=5E8736A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=IoNjQ-TBS1kAX8LjBgU&oh=06a954ef4e92cfc91bd6ff978e354df3&oe=5E8736A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zernovyex-fasol-x-chechevitsa-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=C9Pz-e_n4vgAX95cz-v&oh=71197264cb894a5775e23bc13d2446c4&oe=5E83C340" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=77SmhEyXWMkAX-I7r-m&oh=5271ba68cb18bac5bc9838947ffecfca&oe=5E90F240" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bananovyy-fosterxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=1897tck2ttAAX__nxjP&oh=3ce85af1795a10e1d5fdb410d4aad2a9&oe=5E5D3E36" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=1897tck2ttAAX__nxjP&oh=9b3755974a5c2d7227896f66940e660d&oe=5E5E8FB6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=8r9hnf_WH04AX96LWqa&oh=789806a6b1d94a8bfc6be69bec2a7721&oe=5E8A0842" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=eF83l5XoSP0AX9tgJTH&oh=c57ed1f67a9de19e6cefeeec75d76678&oe=5E973742" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shchadyashchee-ochishchenie-pecheni" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wFMSzZuqTTkAX8kQktM&oh=8e6c10096ea401663f05406792fca392&oe=5E8FBEB2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ZIpapdrk51kAX9AVu9Q&oh=eaee319ece55d46499af212336e2b327&oe=5E8FBEB2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-spravit-sya-so-streptokokkom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=qZQat4P-groAX-lxoYa&oh=0fb1f08b881fa747eb3dead1042a9c46&oe=5E8975A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=r3laQONYwggAX-DFBV0&oh=0d4bf68c3cc95285e103cad40ddfacbe&oe=5E96A4A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="superbakteriya-streptokokk" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Dawpe2DavUAAX8xEdjs&oh=c00b239663418a4c055c4235e8d18de5&oe=5E8F3924" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=bchCdtX12xAAX_tnrnB&oh=a4765be123e1e8dd9c4183ef9f4252da&oe=5E8F3924" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhivaya-vodaxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=vdr0fa091hsAX9LoQhC&oh=94c074882cb5e56e980d52c7a2ce40b9&oe=5E86F13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Kw8GevPybbcAX-VphXr&oh=5852bbc6be52fed3e8165dcfdf7608b8&oe=5E86F13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="kak-podnyat--vitamin-d" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=cU3cdfVAkjQAX8YphZ4&oh=40e9bde2cd0214ca0fa32d5eb5aef84d&oe=5E861984" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="x-ya-iskrenne-khochu-pomoch--temx-kto-gotov" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83710710_620442751869359_3671035307006470513_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=xF8dE90S6wUAX91Yxw_&oh=0bddf633a51b47c218225d9a0287c6e5&oe=5E88349D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✨ Я искренне хочу помочь тем, кто готов">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
